# FrenchLoadForecast

./: .gitignore  README.md  hello.py  pyproject.toml
notebooks/: data_analysis.ipynb  interactive_training.ipynb
outputs/: rte_run_metrics.csv  rte_run_preds.csv  rte_run_runinfo.json
scripts/: process_rte_file.py  run_experiment_pipeline.py
src/ensembler/: opera.py  opera_ensembler.py
src/forecasters/: arimax.py  catboost.py  gam.py  linear.py
src/utils/: helpers.py  plot.py
